# 2dplatformer

./: .gitignore  CMakeLists.txt  build.sh  configure.sh  main.cpp  run.sh  todo.txt
cmake/: FindSDL2_mixer.cmake
include/: game.h  game_level.h  game_menu.h  game_object.h  grid.h  level_end_platform.h  menu_object.h  pass_through_platform.h  player_object.h  resource_manager.h  shader.h  sound.h  spike_platform.h  sprite_renderer.h  texture.h  victory_screen.h
levels/: first.txt  one.txt  three.txt  two.txt
shaders/: ocolor_lcolor.fs  pos_color.vs  space_matrix.vs  sprite.frag  sprite.vs
src/: CMakeLists.txt  game.cpp  game_level.cpp  game_menu.cpp  game_object.cpp  grid.cpp  level_end_platform.cpp  pass_through_platform.cpp  player_object.cpp  shader.cpp  sound.cpp  spike_platform.cpp  sprite_renderer.cpp  victory_screen.cpp
src/game/: game.cpp
src/img_loader/: stb_image.h
src/shader_loader/: shader.cpp  shader.h
src/shaders/: color.fs  light_cube.fs  ocolor_lcolor.fs  pos_color_tex_sh.vs  shader.fs  shader.vs  space_matrix.vs  space_matrix_color.vs  space_matrix_tex.vs  tex.fs  tex_sh.fs  trans_color_tex_sh.vs  trans_tex.vs
src/texture_loader/: texture.cpp  texture.h
